慕课网 DOM 事件探秘第二个 demo 完成

--- a/JavaScript/imooc-demo/keyEvent/index.html
+++ b/JavaScript/imooc-demo/keyEvent/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="keyEvent" />
         <link type="text/css" rel="stylesheet" href="css/style.css" />
         <title>抽奖</title>
+        <script src="js/script.js"></script>
     </head>
     <body>
         <div id="title" class="title">开始抽奖啦!</div>
