--- a/JavaScript/imooc-demo/JS-Animation-Effect/index.html
+++ b/JavaScript/imooc-demo/JS-Animation-Effect/index.html
@@ -11,9 +11,15 @@
     </head>
     <body>
         <div id="speed">速度动画</div>
-        <div id="alpha">透明动画</div>
+        <div id="opacity">透明动画</div>
         <div id="buffer">缓冲动画</div>
-        <div id="mutli">多种动画</div>
+        <div id="mutli">多物动画
+            <ul>
+                <li id="mutli-speed"></li>
+                <li id="mutli-opacity"></li>
+                <li id="mutli-buffer"></li>
+            </ul>
+        </div>
         <div id="chain">链式动画</div>
         <div id="meanwhile">同时动画</div>
     </body>
