--- a/JavaScript/my-own-imitation-demo/tmall-nav/index.html
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/index.html
@@ -11,7 +11,10 @@
     </head>
     <body>
         <div class="nav">
-            <span class="title">商品分类</span>
+            <div class="tmall-icon"></div>
+            <div class="title">
+                    <span>商品分类</span>
+            </div>
             <ul class="menu">
                 <li>
                     <a href="#">女装</a>
