--- a/JavaScript/my-own-imitation-demo/tmall-nav/index.html
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/index.html
@@ -10,79 +10,94 @@
         <script src="js/script.js"></script>
     </head>
     <body>
-        <div class="nav">
-            <div class="tmall-icon"></div>
-            <div class="title">
-                    <span>商品分类</span>
+        <div class="box">
+            <div class="nav">
+                <div class="tmall-icon"></div>
+                <div class="title">
+                        <span>商品分类</span>
+                </div>
+                <ul class="menu">
+                    <li>
+                        <a href="#">女装</a>
+                        /<a href="#">内衣</a>
+                    </li>
+                    <li>
+                        <a href="#">男装</a>
+                        /<a href="#">运动户外</a>
+                    </li>
+                    <li>
+                        <a href="#">女鞋</a>
+                        /<a href="#">男鞋</a>
+                        /<a href="#">箱包</a>
+                    </li>
+                    <li>
+                        <a href="#">美妆</a>
+                        /<a href="#">个人护理</a>
+                    </li>
+                    <li>
+                        <a href="#">腕表</a>
+                        /<a href="#">眼镜</a>
+                        /<a href="#">珠宝饰品</a>
+                    </li>
+                    <li>
+                        <a href="#">手机</a>
+                        /<a href="#">数码</a>
+                        /<a href="#">电脑办公</a>
+                    </li>
+                    <li>
+                        <a href="#">母婴玩具</a>
+                    </li>
+                    <li>
+                        <a href="#">零食</a>
+                        /<a href="#">茶酒</a>
+                        /<a href="#">进口食品</a>
+                    </li>
+                    <li>
+                        <a href="#">生鲜水果</a>
+                    </li>
+                    <li>
+                        <a href="#">大家电</a>
+                        /<a href="#">生活电器</a>
+                    </li>
+                    <li>
+                        <a href="#">家具建材</a>
+                    </li>
+                    <li>
+                        <a href="#">汽车</a>
+                        /<a href="#">配件</a>
+                        /<a href="#">用品</a>
+                    </li>
+                    <li>
+                        <a href="#"> 家纺</a>
+                        /<a href="#">家饰</a>
+                        /<a href="#">鲜花</a>
+                    </li>
+                    <li>
+                        <a href="#">医药保健</a>
+                    </li>
+                    <li>
+                        <a href="#">厨具</a>
+                        /<a href="#">收纳</a>
+                        /<a href="#">宠物</a>
+                    </li>
+                    <li>
+                        <a href="#">图书音像</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="menu">
-                <li>
-                    <a href="#">女装</a>
-                    /<a href="#">内衣</a>
-                </li>
-                <li>
-                    <a href="#">男装</a>
-                    /<a href="#">运动户外</a>
-                </li>
-                <li>
-                    <a href="#">女鞋</a>
-                    /<a href="#">男鞋</a>
-                    /<a href="#">箱包</a>
-                </li>
-                <li>
-                    <a href="#">美妆</a>
-                    /<a href="#">个人护理</a>
-                </li>
-                <li>
-                    <a href="#">腕表</a>
-                    /<a href="#">眼镜</a>
-                    /<a href="#">珠宝饰品</a>
-                </li>
-                <li>
-                    <a href="#">手机</a>
-                    /<a href="#">数码</a>
-                    /<a href="#">电脑办公</a>
-                </li>
-                <li>
-                    <a href="#">母婴玩具</a>
-                </li>
-                <li>
-                    <a href="#">零食</a>
-                    /<a href="#">茶酒</a>
-                    /<a href="#">进口食品</a>
-                </li>
-                <li>
-                    <a href="#">生鲜水果</a>
-                </li>
-                <li>
-                    <a href="#">大家电</a>
-                    /<a href="#">生活电器</a>
-                </li>
-                <li>
-                    <a href="#">家具建材</a>
-                </li>
-                <li>
-                    <a href="#">汽车</a>
-                    /<a href="#">配件</a>
-                    /<a href="#">用品</a>
-                </li>
-                <li>
-                    <a href="#"> 家纺</a>
-                    /<a href="#">家饰</a>
-                    /<a href="#">鲜花</a>
-                </li>
-                <li>
-                    <a href="#">医药保健</a>
-                </li>
-                <li>
-                    <a href="#">厨具</a>
-                    /<a href="#">收纳</a>
-                    /<a href="#">宠物</a>
-                </li>
-                <li>
-                    <a href="#">图书音像</a>
-                </li>
-            </ul>
+            <div class="details">
+                <div class="left-contents">
+                        <dl>
+                            <dt>当季流行</dt><span>></span>
+                            <dd><a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a></dd>
+                        </dl>
+                        <dl>
+                            <dt>当季流行</dt><span>></span>
+                            <dd><a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a></dd>
+                        </dl>
+                </div>
+                <div class="right-brand">商标</div>
+            </div>
         </div>
     </body>
 </html>
