--- a/JavaScript/my-own-imitation-demo/tmall-nav/index.html
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/index.html
@@ -87,16 +87,56 @@
             </div>
             <div class="details">
                 <div class="left-contents">
-                        <dl>
-                            <dt>当季流行</dt><span>></span>
-                            <dd><a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a></dd>
-                        </dl>
-                        <dl>
-                            <dt>当季流行</dt><span>></span>
-                            <dd><a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a></dd>
-                        </dl>
+                    <dl>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>当季流行</span><span>></span></dt>
+                        <dd>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                    </dl>
                 </div>
-                <div class="right-brand">商标</div>
+                <div class="right-brand">
+                    <div class="brand">
+                        <a href="#"><img src="img/1.jpg"></a>
+                        <a href="#"><img src="img/2.jpg"></a>
+                        <a href="#"><img src="img/3.jpg"></a>
+                        <a href="#"><img src="img/4.jpg"></a>
+                        <a href="#"><img src="img/5.jpg"></a>
+                        <a href="#"><img src="img/6.jpg"></a>
+                        <a href="#"><img src="img/1.jpg"></a>
+                        <a href="#"><img src="img/2.jpg"></a>
+                        <a href="#"><img src="img/3.jpg"></a>
+                        <a href="#"><img src="img/4.jpg"></a>
+                        <a href="#"><img src="img/5.jpg"></a>
+                        <a href="#"><img src="img/6.jpg"></a>
+                    </div>
+                    <div class="big-brand">
+                        <a href="#"><img src="img/7.jpg"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
