12.仿天猫导航栏 demo 完成

--- a/JavaScript/my-own-imitation-demo/tmall-nav/index.html
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/index.html
@@ -92,29 +92,29 @@
                         <dd>
                             <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
                         </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
+                        <dt><span>家居服</span><span>></span></dt>
+                        <dd>
+                            <a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                        </dd>
+                        <dt><span>女士下装</span><span>></span></dt>
                         <dd>
                             <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
                         </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
+                        <dt><span>精选上装</span><span>></span></dt>
                         <dd>
-                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                            <a href="#">夏季新品</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
                         </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
+                        <dt><span>文胸塑身</span><span>></span></dt>
                         <dd>
-                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
                         </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
+                        <dt><span>特色女装</span><span>></span></dt>
                         <dd>
-                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">百搭船袜</a>
                         </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
+                        <dt><span>流行</span><span>></span></dt>
                         <dd>
-                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
-                        </dd>
-                        <dt><span>当季流行</span><span>></span></dt>
-                        <dd>
-                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a><a href="#">百搭船袜</a>
+                            <a href="#">夏季新品</a><a href="#">商场同款</a><a href="#">仙女连衣裙</a><a href="#">T恤</a><a href="#">衬衫</a><a href="#">时髦外套</a><a href="#">休闲裤</a><a href="#">牛仔裤</a><a href="#">无痕文胸</a><a href="#">运动文胸</a><a href="#">潮流家居服</a>
                         </dd>
                     </dl>
                 </div>
