--- a/JavaScript/imooc-demo/jQuery-Plugs/Validation/demo1.html
+++ b/JavaScript/imooc-demo/jQuery-Plugs/Validation/demo1.html
@@ -16,13 +16,18 @@
             <form class="loginform" id="loginform" action="" method="GET" name="login" style="width: 350px;">
                     <fieldset>
                         <legend>用户登录</legend>
+                        <p id="info"></p>
                         <p>
                             <label for="username">用户名:</label>
                             <input type="text" id="username" name="username" placeholder="请输入用户名" />
                         </p>
                         <p>
                             <label for="password">密码:</label>
-                            <input type="password" id="password" name="password" placeholder="请输入密码" />
+                            <input type="password" id="password" name="password" class="password" placeholder="请输入密码" />
+                        </p>
+                        <p>
+                            <label for="confirm_password">密码:</label>
+                            <input type="password" class="password" name="confirm_password" placeholder="请确认密码" />
                         </p>
                         <input type="submit" class="submit" value="登录" />
                     </fieldset>
