--- a/JavaScript/imooc-demo/jQuery-Plugs/Validation/demo1.html
+++ b/JavaScript/imooc-demo/jQuery-Plugs/Validation/demo1.html
@@ -19,7 +19,7 @@
                         <p id="info"></p>
                         <p>
                             <label for="username">用户名:</label>
-                            <input type="text" id="username" name="username" placeholder="请输入用户名" />
+                            <input type="text" id="username" name="username" placeholder="请输入用户名(电子邮件)" />
                         </p>
                         <p>
                             <label for="password">密码:</label>
@@ -28,6 +28,10 @@
                         <p>
                             <label for="confirm_password">密码:</label>
                             <input type="password" class="password" name="confirm_password" placeholder="请确认密码" />
+                        </p>
+                        <p>
+                            <label for="postcode">邮政编码:</label>
+                            <input type="text" class="postcode" name="postcode" placeholder="请输入邮政编码" />
                         </p>
                         <input type="submit" class="submit" value="登录" />
                     </fieldset>
