--- a/JavaScript/imooc-demo/position-nav/index.html
+++ b/JavaScript/imooc-demo/position-nav/index.html
@@ -10,11 +10,11 @@
     <body>
        <div id="menu">
             <ul>
-                <li><a href="#" class="current">1F 男装</a></li>
-                <li><a href="#">2F 女装</a></li>
-                <li><a href="#">3F 美妆</a></li>
-                <li><a href="#">4F 数码</a></li>
-                <li><a href="#">5F 母婴</a></li>
+                <li><a href="#item1" class="current">1F 男装</a></li>
+                <li><a href="#item2">2F 女装</a></li>
+                <li><a href="#item3">3F 美妆</a></li>
+                <li><a href="#item4">4F 数码</a></li>
+                <li><a href="#item5">5F 母婴</a></li>
             </ul>
        </div>
        <div id="content">
