3.原生 JavaScript 实现效果

--- a/JavaScript/imooc-demo/position-nav/index.html
+++ b/JavaScript/imooc-demo/position-nav/index.html
@@ -5,7 +5,10 @@
         <title>网页定位导航</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="js/script.js"></script>
+        <!-- 使用 jQuery 实现 -->
+        <!-- <script src="js/jquery.js"></script> -->
+        <!-- 使用原生 JavaScript 实现 -->
+        <script src="js/origin.js"></script>
     </head>
     <body>
        <div id="menu">
